# ssm-simulators

./: .gitignore  404.html  MANIFEST.in  README.md  basic_tutorial copy.ipynb  basic_tutorial.ipynb  basic_tutorial.md  basic_tutorial_tmp.ipynb  index.html  install_req.md  mkdocs.yml  mkdocs_tmp.yml  objects.inv  pyproject.toml  setup.py  test.ipynb
.github/workflows/: build_wheels.yml  run_tests.yml
api/basic_simulators/: index.html
api/config/: index.html
api/dataset_generators/: index.html
api/ssms/: index.html
api/support_utils/: index.html
basic_simulators/: boundary_functions.py  simulator.py
basic_tutorial/basic_tutorial/: index.html
config/: config.py
dataset_generators/: __init__.py  lan_mlp.py
docs/: index.md
docs/api/: basic_simulators.md  config.md  dataset_generators.md  ssms.md  support_utils.md
docs/basic_tutorial/: basic_tutorial.ipynb
docs/overrides/: main.html
docs/site/: 404.html  index.html
docs/site/api/basic_simulators/: index.html
docs/site/api/config/: index-CLPS-AFENGLER.html  index.html
docs/site/api/dataset_generators/: index.html
docs/site/api/ssms/: index-CLPS-AFENGLER.html  index.html
docs/site/api/support_utils/: index.html
docs/site/basic_tutorial/basic_tutorial/: index-CLPS-AFENGLER.html  index.html
docs/site/overrides/: main.html
docs/site/search/: search_index.json
docs/source/: conf.py  index.rst  modules.rst  ssms.basic_simulators.rst  ssms.config.rst  ssms.dataset_generators.rst  ssms.rst  ssms.support_utils.rst
docs_old/source/: conf.py  index.rst  ssms.basic_simulators.rst
notebooks/: DMC_simulator_test.ipynb  basic_tutorial copy.ipynb  basic_tutorial.ipynb  basic_tutorial_12122024.ipynb  basic_tutorial_old.ipynb  basic_tutorial_tmp.ipynb  debug_shape_problems.ipynb  essential_tests.ipynb  test_deadline.ipynb  test_lba.ipynb  test_mic2_ornstein.ipynb  test_sampling_from_subspaces.ipynb  test_seq2.ipynb
overrides/: main.html
search/: search_index.json
site/: 404.html  objects.inv
site/api/basic_simulators/: index.html
site/api/config/: index.html
site/basic_tutorial/basic_tutorial/: index.html
site/overrides/: main.html
src/: __init__.py  cssm.c  cssm.cpp  cssm.html  cssm.pyx  race2_draft.ipynb
ssms/: __init__.py
ssms/basic_simulators/: __init__.py  andrew-testing.ipynb  boundary_functions.py  drift_functions.py  simulator.py  test.py  theta_processor.py  theta_processors.py
ssms/config/: __init__.py  config.py  kde_constants.py
ssms/dataset_generators/: __init__.py  flows.py  lan_mlp.py  snpe.py
ssms/support_utils/: __init__.py  kde_class.py  utils.py
support_utils/: kde_class.py
tests/: __init__.py  test_simulator.py
