[build-system]
requires = ["setuptools", "wheel", "Cython>=0.29.23", "numpy >= 1.20"]

[project.urls]
"Homepage"= "https://github.com/AlexanderFengler/ssm-simulators"
"Bug Tracker"= "https://github.com/AlexanderFengler/ssm-simulators/issues"

[project]
name= "ssm-simulators"
version= "0.6.1"
authors= [{name = "Alexander Fenger", email = "alexander_fengler@brown.edu"}]
description= "SSMS is a package collecting simulators and training data generators for a bunch of generative models of interest in the cognitive science / neuroscience and approximate bayesian computation communities"
readme = "README.md"
requires-python= ">3.8, <3.12"
classifiers= [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]
dependencies=["numpy >= 1.17.0", "scipy >=1.6.3", "cython >= 0.29.23", "pandas >= 1.0.0", "scikit-learn >= 0.24.0", "psutil >= 5.0.0"]
keywords= ["simulators", "generative models", "cognitive science", "neuroscience"]

[project.optional-dependencies]
dev = ["black", "ruff", "pytest"]
